--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<head>
 		<title>System Info API</title>
 		
-		<link href="css/style.css" rel="stylesheet" type="text/css">
+		<link href="../css/style.css" rel="stylesheet" type="text/css">
 	</head>
 
 	<body>
